css/style.css
h1 {
  text-align: center;
  font-size: 30px;
}

h2 {
  margin: 15px 0px 1px -20px;
  font-size: 20px;
}

ul {
  margin: 0px 0px 0px 0px;  
}

ol {
  margin: 0px 0px 0px -40px;
  list-style: none;
  counter-reset: mycounter start;
}

ol li:before {
  counter-increment: mycounter;
  content: counter(mycounter) ') ';
}

li {
  padding-top: 20px;
  margin-left: 20px;
}

p {
  padding-top: 20px;
  padding-bottom: 0px;
  margin-top: 0px;
  margin-bottom: 0px;
  margin-right: 100px;
}

@media print {
  .page-break { 
    page-break-before: always;
  }
}

html {
  height: 100%;
}

body {
  display: flex;
  flex-direction: column;
  height: 100%;
}

.content {
  flex: 1 0 auto;
}

.main {
  margin-left: 30px;
}

.student-info {
  width: 100%;
  height: 80px;
  text-align: center;
}

.indent1 {
  margin-left: 30px;
}

.indent2 {
  margin-left: 60px;
}

.vspace1 {
  margin-top: 18px;  
}

.vspace2 {
  margin-top: 50px;  
}

.vspace3 {
  margin-top: 150px;  
}

.hang {
  text-indent: -1.1em;
  margin-left: 1.1em;
}

.meet-answers {
  margin-bottom: 30px;
  flex: 0 0 auto; 
}

.meet-answers li {
  margin-top: 18px;  
  margin-left: 0px;  
}

.top-align {
  vertical-align: top;
}
/*table, td, th, tr {
    border: 2px solid black;
}
*/

.grid {
  border-collapse: collapse;
  display: inline-block;
  margin: 10px;
  vertical-align: middle;
}

.grid tr {
  border-top: solid 1px;  
  border-bottom: solid 1px;  
}

.grid td {
  border-left: solid 1px;
  border-right: solid 1px;
  padding: 0px;
  width: 20px;
  height: 20px;
}

.base-chart 
{
  border-collapse: collapse;
  margin-left: 60px;
  margin-top: 10px;
}

.base-chart tr:nth-child(2) { 
  border-top: solid 2px;
}

.base-chart td {
  text-align: center;
  width: 50px;
  border-left: solid 2px;
  border-right: solid 2px;
  padding-left: 5px;
  padding-right: 5px;
}

.no-line {
  border-left: solid 0px !important; 
  border-right: solid 0px !important; 
}

.series {
  word-spacing: 10px;
}

.calendar {
  border-collapse: collapse;
  margin: auto;
}

.cal-day {
  border: solid 2px;
  text-align: center;
  font-weight: bold;    
}

.cal-box {
  border: solid 2px;
  width: 110px;
  padding: 0px;
  margin: 0px;
}

.cal-value {
  font-size: 20px;  
  font-weight: bold;  
  text-align: center;
  vertical-align: middle;
  width: 25px;
  height: 25px;
  padding: 2px;
  margin: -2px;
  border: solid 2px;  
}

.cal-digits {
  padding: 0px;
  margin: 0px;
  text-align: center;
  font-size: 40px;
  font-family: "Comic Sans MS";
  font-weight: bold;
}

.cal-base {
  padding: 1px;
  margin-right: 5px;  
  text-align: right;
}

